# tiny-bci-ssvep-experiment

./: .gitignore  .gitmodules  CMakeLists.txt  LSL.cmake
include/: microsecond_timer.h  pch.h  pipeline.h  presentation.h  producer.h  storage.h  timer.h  trial_conductor.h
include/data/: eeg_source.h  lsl_eeg_source.h  lsl_trigger_outlet.h  neuropawn_eeg_source.h  serial.h  synthetic_eeg_source.h  trigger_source.h  unicorn_eeg_source.h
producer/: synthetic_producer.c  synthetic_producer.h  tbci_producer_factory.c  tbci_producer_factory.h  tbci_trigger_generator.c  tbci_trigger_generator.h
src/: main.c  main_unicorn.c  microsecond_timer.c  pipeline.c  presentation.c  producer.c  storage.c  timer.c  trial_conductor.c
src/data/: lsl_eeg_source.c  lsl_trigger_outlet.c  neuropawn_eeg_source.c  serial_unix.c  serial_utils.c  serial_windows.c  synthetic_eeg_source.c  trigger_source.c  unicorn_eeg_source.c
